--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,13 @@
 
 .ktAlias {
   margin-right: 12px;
+  text-shadow: 1px 1px 2px #005377, 0 0 25px #005377, 0 0 5px #005377;
+}
+
+.bcdAlias {
+  margin-right: 12px;
+  text-shadow: 1px 1px 2px rgb(171, 218, 130), 0 0 25px rgb(171, 218, 130),
+    0 0 5px rgb(171, 218, 130);
 }
 
 .contractLink {
